--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,87 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: var(--color-2);
+    color: var(--color-1);
     font-family: "OpenSans-Regular";
 }
 body{
     background: var(--background-1);
+}
+.header {
+    background-image: url('../storage/img/background.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-bottom-left-radius: 10%;
+    border-bottom-right-radius: 10%;
+}
+.header .nameLocation{
+    display: flex;
+    align-items: center;
+    padding-left: 1rem;
+    width: 100%;
+    height: 15%;
+}
+.header .weather{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 70%;
+}
+.header .weather .number{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    height: 100%;
+    gap: 1rem;
+}
+.header .weather .number h2{
+    font-size: 5rem;
+}
+.header .weather .number .text{
+    display: flex;
+    align-items: end;
+    width:50%;
+    height: 30%;
+}
+.header .weather .icon{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 50%;
+}
+.header .weather .icon img{
+    width: 50%;
+    height: 50%;
+    object-fit: contain;
+    overflow: hidden;
+}
+.header .date{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 20%;
+    padding: 1rem;
+}
+.header .date .day{
+    display: flex;
+    align-items: end;
+    width: 50%;
+    height: 100%;
+
+}
+.header .date .dayWeather{
+
+    width: 50%;
+    text-align: right;
 }
