--- a/css/style.css
+++ b/css/style.css
@@ -40,12 +40,13 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 50%;
+    width: 100%;
     height: 100%;
-    gap: 1rem;
+    padding: 1rem;
+   
 }
 .header .weather .number h2{
-    font-size: 5rem;
+    font-size: 2.5rem;
 }
 .header .weather .number .text{
     display: flex;
@@ -59,7 +60,7 @@ body{
     align-items: center;
     justify-content: center;
     height: 100%;
-    width: 50%;
+    width: 100%;
 }
 .header .weather .icon img{
     width: 50%;
